Sat Jan 29 15:40:01 CET 2000  Sven Neumann <sven@gimp.org>

	* app/convert.c
	* app/palette_select.c
	* app/palette_select.h: In indexed_conversion dialog, use a 
	pattern_selector instead op an option_menu. Adam, I hope you like 
	this...

Sat Jan 29 12:06:51 CET 2000  Sven Neumann <sven@gimp.org>

	* plug-ins/common/curve_bend.c
	* plug-ins/common/deinterlace.c
	* plug-ins/common/despeckle.c
	* plug-ins/common/plasma.c
	* plug-ins/common/randomize.c
	* plug-ins/common/sharpen.c
	* plug-ins/gap/gap_frontends_main.c
	* plug-ins/gdyntext/gdyntext.c
	* plug-ins/gfig/gfig.c
	* plug-ins/print/print-ps.c
	* plug-ins/print/print.c
	* plug-ins/sel2path/global.h
	* plug-ins/sel2path/math.c
	* plug-ins/sel2path/vector.c: removed warnings

Fri Jan 28 17:38:36 CET 2000  Marc Lehmann <pcg@goof.com>

        * PLUGIN_MAINTAINERS, PLUGIN_CVS: mark Robert Krawitz with write
        access to plug-ins/print, but comment all update commands out due
        to Sven's concerns.

2000-01-28  Michael Natterer  <mitch@gimp.org>

	* app/main.c: bind the "gimp-libgimp" textdomain to get the
	libgimp widget translations. Did some code cleanup.

	* libgimp/stdplugins-intl.h: bind "gimp-libgimp".

	* libgimp/gimpintl.h: copyright header.

	* libgimp/libgimp-intl.h: there is no dgettext_noop() function
	(typo/braino).

	* libgimp/gimpwidgets.[ch]: one more table attach helper
	function. Should probably find a general way for the two
	functions.

	* plug-ins/common/CML_explorer.c
	* plug-ins/common/align_layers.c
	* plug-ins/common/scatter_hsv.c
	* plug-ins/common/threshold_alpha.c: removed the gtkW_* wrapper
	functions. Badly hacked CML_explorer (The optionmenu creation is a
	bit more ugly than before but at least consistent with the other
	files using the libgimp optionmenu constructor).

2000-01-28  Asbjorn Pettersen  <asbjornP@dualog.no>

	* plug-ins/print/print-ps.c: use g_strcasecmp() instead of
	strcasecmp().

	* plug-ins/print/print.c: Fix output_to,driver settings
	for OS/2 version.
